add:userDomain
